# hunteropencvcudatest

./: CMakeLists.txt  README.md  build.sh
cmake/: config.cmake
docs/: index.md
